Modulo AmProfile (está fallando la validación del campo gestor_perfil_id_padre

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "homepage": "http://framework.zend.com/",
     "require": {
         "php": ">=5.5",
-        "zendframework/zendframework": "~2.5",
+        "zendframework/zendframework": "2.5.*",
         "evandotpro/edp-module-layouts": "1.0"
     }
 }
