--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,13 @@
 /module/Gestor
 /module/Gestor_old
 # Created by .ignore support plugin (hsz.mobi)
+/public/absconsultor/node_modules
 ### ZendFramework template
 # Composer files
 composer.phar
 
+/public/absconsultor/dist
+/material
 # Local configs
 config/autoload/*.local.php
 
