Script para generar pantallazos de las secciones de la web

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /module/Gestor_old
 # Created by .ignore support plugin (hsz.mobi)
 /public/absconsultor/node_modules
+/public/absconsultor/screens
 ### ZendFramework template
 # Composer files
 composer.phar
