--- a/html/absconsultor/package.json
+++ b/html/absconsultor/package.json
@@ -18,6 +18,7 @@
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
+    "flag-icon-css": "^2.4.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
