Implementado el captcha del formulario de contacto

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /data/vendor
 /public/media
 /html/media
+/html/captcha/*.png
 /public/administrator/node_modules
 /config/application.config.old
 /module/Gestor
