--- a/html/absconsultor/package.json
+++ b/html/absconsultor/package.json
@@ -18,9 +18,11 @@
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
+    "capture-video-frame": "^0.1.1",
     "flag-icon-css": "^2.4.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-clean-css": "^2.0.12",
     "gulp-concat": "^2.6.0",
     "gulp-local-screenshots": "^2.2.0",
     "gulp-rename": "^1.2.2",
