--- a/html/administrator/package.json
+++ b/html/administrator/package.json
@@ -9,6 +9,7 @@
   "author": "Miguel Gracia",
   "license": "ISC",
   "devDependencies": {
+    "capture-video-frame": "^0.1.1",
     "gulp-concat": "^2.6.0",
     "gulp-uglify": "^1.5.3"
   }
