--- a/html/.htaccess
+++ b/html/.htaccess
@@ -19,3 +19,7 @@ RewriteRule ^(.*)$ %{ENV:BASE}index.php [NC,L]
 #AuthName "ABS Consultor"
 #AuthUserFile /var/www/vhost/absconsultor.es/home/html/.htpasswd
 #Require valid-user
+
+AddType video/ogg .ogv
+AddType video/mp4 .mp4
+AddType video/webm .webm
