--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/html/administrator/js/build/administrator.min.js
 /html/cache_media/media
 /html/administrator/js/build
 /html/administrator/node_modules
