--- a/html/absconsultor/package.json
+++ b/html/absconsultor/package.json
@@ -28,6 +28,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.4",
+    "owl.carousel": "^2.2.0",
     "viewerjs": "^0.5.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
