--- a/data/composer.json
+++ b/data/composer.json
@@ -35,7 +35,8 @@
     "zendframework/zend-paginator": "^2.8",
     "zendframework/zend-mail": "^2.10",
     "zendframework/zend-captcha": "^2.9",
-    "zendframework/zend-navigation": "^2.9"
+    "zendframework/zend-navigation": "^2.9",
+    "google/apiclient": "2.0.*"
   },
   "autoload": {
     "psr-4": {
