--- a/html/absconsultor/.babelrc
+++ b/html/absconsultor/.babelrc
@@ -1,5 +1,5 @@
 {
-    "presets": ["es2015","react"],
+    "presets": ["@babel/preset-env"],
     "plugins": [
         "transform-object-assign"
     ]
