--- a/html/absconsultor/package.json
+++ b/html/absconsultor/package.json
@@ -9,28 +9,29 @@
   "author": "Miguel Gracia Martin",
   "license": "ISC",
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-core": "^6.11.4",
-    "babel-plugin-syntax-class-constructor-call": "^6.8.0",
-    "babel-plugin-transform-es2015-template-literals": "^6.8.0",
-    "babel-plugin-transform-object-assign": "^6.8.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "babelify": "^7.3.0",
-    "browserify": "^13.1.0",
-    "capture-video-frame": "^0.1.1",
-    "flag-icon-css": "^2.4.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-clean-css": "^2.0.12",
-    "gulp-concat": "^2.6.0",
+    "@babel/cli": "^7.7.7",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "babel-plugin-transform-object-assign": "^6.22.0",
+    "babelify": "^10.0.0",
+    "bootstrap-sass": "^3.4.1",
+    "browserify": "^16.5.0",
+    "flag-icon-css": "^3.4.5",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-concat": "^2.6.1",
     "gulp-local-screenshots": "^2.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.4",
-    "owl.carousel": "^2.2.0",
-    "viewerjs": "^0.5.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
+    "gulplog": "^1.0.0",
+    "jquery": "^3.4.1",
+    "jquery.easing": "^1.4.1",
+    "js-cookie": "^2.2.1",
+    "node-sass": "^4.13.0",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0",
+    "waypoints": "^4.0.1"
   }
 }
