--- a/html/absconsultor/package.json
+++ b/html/absconsultor/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babelify": "^10.0.0",
     "bootstrap-sass": "^3.4.1",
+    "bootstrap.native": "^2.0.27",
     "browserify": "^16.5.0",
     "flag-icon-css": "^3.4.5",
     "gulp": "^4.0.2",
