--- a/html/absconsultor/package.json
+++ b/html/absconsultor/package.json
@@ -12,6 +12,7 @@
     "@babel/cli": "^7.7.7",
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
+    "animated-scroll-to": "^2.0.5",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babelify": "^10.0.0",
     "bootstrap-sass": "^3.4.1",
@@ -27,8 +28,6 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
     "gulplog": "^1.0.0",
-    "jquery": "^3.4.1",
-    "jquery.easing": "^1.4.1",
     "js-cookie": "^2.2.1",
     "node-sass": "^4.13.0",
     "vinyl-buffer": "^1.0.1",
