--- a/html/absconsultor/package.json
+++ b/html/absconsultor/package.json
@@ -4,6 +4,7 @@
   "description": "Assets from absconsultor frontend",
   "main": "index.js",
   "scripts": {
+    "gulp": "./node_modules/gulp/bin/gulp.js sass && ./node_modules/gulp/bin/gulp.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Miguel Gracia Martin",
