--- a/html/absconsultor/package.json
+++ b/html/absconsultor/package.json
@@ -20,6 +20,7 @@
     "bootstrap.native": "^2.0.27",
     "browserify": "^16.5.0",
     "flag-icon-css": "^3.4.5",
+    "fslightbox": "^3.0.9",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.2.0",
