--- a/html/absconsultor/package.json
+++ b/html/absconsultor/package.json
@@ -32,6 +32,7 @@
     "gulplog": "^1.0.0",
     "js-cookie": "^2.2.1",
     "node-sass": "^4.13.0",
+    "validate.js": "^0.13.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "waypoints": "^4.0.1"
