--- a/html/absconsultor/package.json
+++ b/html/absconsultor/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
     "animated-scroll-to": "^2.0.5",
+    "axios": "^0.19.0",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babelify": "^10.0.0",
     "bootstrap-sass": "^3.4.1",
@@ -32,7 +33,7 @@
     "gulplog": "^1.0.0",
     "js-cookie": "^2.2.1",
     "node-sass": "^4.13.0",
-    "validate.js": "^0.13.1",
+    "validator": "^12.1.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "waypoints": "^4.0.1"
