--- a/html/absconsultor/package.json
+++ b/html/absconsultor/package.json
@@ -37,5 +37,8 @@
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "waypoints": "^4.0.1"
+  },
+  "jshintConfig": {
+    "esversion": 6
   }
 }
