--- a/data/composer.json
+++ b/data/composer.json
@@ -37,7 +37,8 @@
         "laminas/laminas-navigation": "^2.9",
         "google/apiclient": "2.0.*",
         "laminas/laminas-i18n-resources": "^2.6",
-        "laminas/laminas-dependency-plugin": "^1.0"
+        "laminas/laminas-dependency-plugin": "^1.0",
+        "laminas/laminas-mime": "^2.7"
     },
     "autoload": {
         "psr-4": {
