--- a/data/composer.json
+++ b/data/composer.json
@@ -13,32 +13,30 @@
     "prefer-stable": true,
     "require": {
         "php": "^7.1",
-        "laminas/laminas-component-installer": "^1.0 || ^0.7 || ^1.0.0-dev@dev",
-        "laminas/laminas-mvc": "^3.0.1",
-        "laminas/laminas-development-mode": "^3.0",
-        "laminas/laminas-cache": "^2.7.1",
-        "laminas/laminas-db": "^2.8.1",
-        "laminas/laminas-json": "^3.0",
-        "laminas/laminas-log": "^2.9",
-        "laminas/laminas-mvc-console": "^1.1.10",
-        "laminas/laminas-mvc-i18n": "^1.0",
-        "laminas/laminas-mvc-plugins": "^1.0.1",
-        "laminas/laminas-psr7bridge": "^0.2.2",
-        "laminas/laminas-session": "^2.7.1",
-        "laminas/laminas-servicemanager-di": "^1.0",
-        "evandotpro/edp-module-layouts": "1.0",
-        "intervention/image": "2.3.*",
-        "cocur/slugify": "^2.1",
-        "laminas/laminas-i18n": "^2.9",
-        "laminas/laminas-form": "2.14.*",
-        "laminas/laminas-code": "3.4.*",
+        "laminas/laminas-mvc": "^3.1",
+        "laminas/laminas-development-mode": "^3.2",
+        "laminas/laminas-cache": "^2.9",
+        "laminas/laminas-db": "^2.11",
+        "laminas/laminas-json": "^3.1",
+        "laminas/laminas-log": "^2.12",
+        "laminas/laminas-mvc-console": "^1.2",
+        "laminas/laminas-mvc-i18n": "^1.1",
+        "laminas/laminas-mvc-plugins": "^1.0",
+        "laminas/laminas-psr7bridge": "^1.2",
+        "laminas/laminas-session": "^2.9",
+        "laminas/laminas-servicemanager-di": "^1.2",
+        "evandotpro/edp-module-layouts": "^1.0",
+        "intervention/image": "^2.5",
+        "cocur/slugify": "^4.0",
+        "laminas/laminas-i18n": "^2.10",
+        "laminas/laminas-code": "^3.4",
         "laminas/laminas-paginator": "^2.8",
-        "laminas/laminas-mail": "^2.10",
+        "laminas/laminas-mail": "^2.12",
         "laminas/laminas-navigation": "^2.9",
-        "google/apiclient": "2.0.*",
         "laminas/laminas-i18n-resources": "^2.6",
         "laminas/laminas-dependency-plugin": "^1.0",
-        "laminas/laminas-mime": "^2.7"
+        "laminas/laminas-mime": "^2.7",
+        "laminas/laminas-form": "^2.15"
     },
     "autoload": {
         "psr-4": {
