Refactor Authentication Service

--- a/html/administrator/libs/RichFilemanager/scripts/filemanager.config.json
+++ b/html/administrator/libs/RichFilemanager/scripts/filemanager.config.json
@@ -25,7 +25,7 @@
         "fileConnector": "/admin/media/connector",
         "fileRootSizeLimit": false,
         "baseUrl": false,
-        "capabilities": ["select", "upload", "download", "rename", "move", "replace", "delete"],
+        "capabilities": ["select", "upload", "download", "delete"],
         "logger": false,
         "plugins": []
     },
